lab 6(4)