@@ -1,7 +1,9 @@
 package com.example.socialnetworkgui.controller;
 
 import com.example.socialnetworkgui.domain.Account;
+import com.example.socialnetworkgui.domain.Friendship;
 import com.example.socialnetworkgui.domain.User;
+import com.example.socialnetworkgui.events.FriendshipEntityChangeEvent;
 import com.example.socialnetworkgui.events.UserEntityChangeEvent;
 import com.example.socialnetworkgui.observer.Observer;
 import com.example.socialnetworkgui.service.AuthService;
@@ -23,11 +25,12 @@ import javafx.stage.Stage;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
-public class UserController implements Observer<UserEntityChangeEvent> {
+public class UserController implements Observer<FriendshipEntityChangeEvent> {
 
     Account account;
     User user;
@@ -60,10 +63,17 @@ public class UserController implements Observer<UserEntityChangeEvent> {
     }
 
     private void initModel() {
-        Iterable<User> sth = socialNetwork.getAllUsers();
-        List<User> users = StreamSupport.stream(sth.spliterator(), false)
-                .collect(Collectors.toList());
-        model.setAll(users);
+        Iterable<Friendship> sth = socialNetwork.getAllFriendships();
+        List<User> friends = StreamSupport.stream(sth.spliterator(), false)
+                        .filter(x -> ( Objects.equals(x.getId().getE1(), user.getId()) || Objects.equals(x.getId().getE2(), user.getId()) ) && x.getState() )
+                        .map(x -> {
+                            Long idFriend = x.getId().getE1();
+                            if (Objects.equals(idFriend, user.getId()))
+                                idFriend = x.getId().getE2();
+                            return socialNetwork.getUser(idFriend).get();
+                        })
+                        .toList();
+        model.setAll(friends);
     }
 
     public void handleAddUser(ActionEvent event) {
@@ -114,7 +124,73 @@ public class UserController implements Observer<UserEntityChangeEvent> {
     }
 
     @Override
-    public void update(UserEntityChangeEvent event) {
+    public void update(FriendshipEntityChangeEvent event) {
         initModel();
+    }
+
+    public void handleAddFriend(ActionEvent actionEvent) {
+        possibleFriendsWindow();
+    }
+
+    public void handleDeleteFriend(ActionEvent actionEvent) {
+        User user = tableView.getSelectionModel().getSelectedItem();
+        if (user != null) {
+            Optional<Friendship> deleted = socialNetwork.delete(this.user.getFirstName(), this.user.getLastName(), user.getFirstName(), user.getLastName());
+            MessageAlert.showMessage(null, Alert.AlertType.INFORMATION, "Delete Friendship", "Friendship has been removed!");
+        }
+        else
+            MessageAlert.showErrorMessage(null, "You have to select a user!");
+    }
+
+    public void possibleFriendsWindow() {
+        try {
+            FXMLLoader loader = new FXMLLoader();
+            loader.setLocation(getClass().getResource("../views/add-friend-view.fxml"));
+
+            AnchorPane root = loader.load();
+
+            Stage dialogStage = new Stage();
+            dialogStage.setTitle("Add a friend");
+            dialogStage.initModality(Modality.APPLICATION_MODAL);
+            Scene scene = new Scene(root);
+            dialogStage.setScene(scene);
+
+            AddFriendController controller = loader.getController();
+            controller.setService(socialNetwork, user, dialogStage);
+
+            dialogStage.show();
+        }
+        catch (IOException e) {
+            e.printStackTrace();
+        }
+
+    }
+
+    public void handleFriendRequests(ActionEvent actionEvent) {
+        friendRequestsWindow();
+    }
+
+    public void friendRequestsWindow() {
+        try {
+            FXMLLoader loader = new FXMLLoader();
+            loader.setLocation(getClass().getResource("../views/friend-requests-view.fxml"));
+
+            AnchorPane root = loader.load();
+
+            Stage dialogStage = new Stage();
+            dialogStage.setTitle("View your friend requests");
+            dialogStage.initModality(Modality.APPLICATION_MODAL);
+            Scene scene = new Scene(root);
+            dialogStage.setScene(scene);
+
+            FriendRequestsController controller = loader.getController();
+            controller.setService(socialNetwork, user, dialogStage);
+
+            dialogStage.show();
+        }
+        catch (IOException e) {
+            e.printStackTrace();
+        }
+
     }
 }
